--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,31 +4,84 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
+
+
 android {
-    compileSdkVersion 28
+    compileSdkVersion build_versions.target_sdk
     defaultConfig {
-        applicationId "com.example.kittytinder"
-        minSdkVersion 21
-        targetSdkVersion 28
+        applicationId "com.example.mi_post"
+        minSdkVersion  build_versions.min_sdk
+        targetSdkVersion build_versions.target_sdk
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
-        release {
+        debug {
+            testCoverageEnabled = true
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        release {
+            testCoverageEnabled = false
+            minifyEnabled true
         }
     }
+
+    testOptions.unitTests.all {
+        useJUnitPlatform()
+
+        testLogging {
+            events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+        }
+    }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //App dependencies
+    implementation deps.support.constraint_layout
+    implementation deps.support.lifecycle_extensions
+    implementation deps.support.appcompat
+    implementation deps.support.recyclerview
+    implementation deps.support.cardview
+    implementation deps.support.core_utils
+    implementation deps.support.design
+    implementation deps.support.core_ktx
+    implementation deps.support.annotations
+
+    //kotlin
+    implementation deps.kotlin.stdlib
+    testImplementation deps.kotlin.test
+    implementation deps.kotlin.plugin
+
+    //retrofit
+    implementation deps.retrofit.retrofit
+    implementation deps.retrofit.converter
+
+    //dagger
+    implementation deps.dagger.dagger
+    kapt deps.dagger.dagger_compiler
+    implementation deps.dagger.android_support
+    kapt deps.dagger.android_processor
+
+    //moshi
+    implementation deps.moshi.moshi
+
+    //room
+    implementation deps.room.runtime
+    kapt deps.room.compiler
+
+    //test
+    testImplementation deps.test.junit
+    testImplementation deps.test.mockk
+    androidTestImplementation deps.test.runner
+
 }
