--- a/versions.gradle
+++ b/versions.gradle
@@ -1,4 +1,3 @@
-
 /**
  * Shared file between builds so that they can all use the same dependencies and
  * maven repositories.
@@ -23,8 +22,10 @@ versions.rec_view = "1.0.0"
 versions.constraint_layout = "2.0.0-alpha2"
 versions.android_gradle_plugin = '3.4.1'
 versions.kotlin = "1.3.31"
+versions.coroutine_version = "1.3.0-M1"
 versions.core_ktx = "1.0.0"
 versions.glide = "4.8.0"
+versions.card_stack_view = "2.3.4"
 
 def support = [:]
 support.annotations = "androidx.annotation:annotation:$versions.support"
@@ -61,6 +62,10 @@ glide.runtime = "com.github.bumptech.glide:glide:$versions.glide"
 glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide"
 deps.glide = glide
 
+def cardStackView = [:]
+cardStackView.card = "com.yuyakaido.android:card-stack-view:$versions.card_stack_view"
+deps.cardStackView = cardStackView
+
 def room = [:]
 room.runtime = "androidx.room:room-runtime:$versions.room"
 room.compiler = "androidx.room:room-compiler:$versions.room"
@@ -71,6 +76,8 @@ def kotlin = [:]
 kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
 kotlin.test = "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin"
 kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+kotlin.coroutines_core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutine_version"
+kotlin.coroutines_android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutine_version"
 deps.kotlin = kotlin
 
 def test = [:]
