--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,11 +77,13 @@ dependencies {
 
     //glide
     implementation deps.glide.runtime
-    annotationProcessor deps.glide.compiler
+    kapt deps.glide.compiler
 
     //card stack view
     implementation deps.cardStackView.card
 
+    //rounded image view
+    implementation deps.roundedImageView.roundView
     //room
     implementation deps.room.runtime
     kapt deps.room.compiler
