--- a/versions.gradle
+++ b/versions.gradle
@@ -26,6 +26,7 @@ versions.coroutine_version = "1.3.0-M1"
 versions.core_ktx = "1.0.0"
 versions.glide = "4.8.0"
 versions.card_stack_view = "2.3.4"
+versions.rounded_image_view = "2.3.0"
 
 def support = [:]
 support.annotations = "androidx.annotation:annotation:$versions.support"
@@ -65,6 +66,10 @@ deps.glide = glide
 def cardStackView = [:]
 cardStackView.card = "com.yuyakaido.android:card-stack-view:$versions.card_stack_view"
 deps.cardStackView = cardStackView
+
+def roundedImageView = [:]
+roundedImageView.roundView = "com.makeramen:roundedimageview:$versions.rounded_image_view"
+deps.roundedImageView = roundedImageView
 
 def room = [:]
 room.runtime = "androidx.room:room-runtime:$versions.room"
